# piranha

./: .buildinfo  .gitchangelog.rc  .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  README.md  appveyor.yml  codecov.yml  conanfile.py  config.hpp.in  fundamental_types.html  genindex.html  getting_started.html  hello_piranha.html  index.html  main.cpp  new_integer.hpp  piranha-config.cmake.in  py-modindex.html  pyranha_celmec.html  pyranha_math.html  pyranha_reference.html  pyranha_root.html  pyranha_test.html  pyranha_types.html  reference.html  search.html  searchindex.js  tutorial.html
_modules/: index.html  pyranha.html
_sources/: index.txt  pyranha_test.txt
benchmark_results/: emma_gastineau2_perf_20150731004707.txt  emma_gastineau3_perf_20150731060142.txt  emma_pearce2_perf_20150730180254.txt  emma_pearce2_unpacked_perf_20150823171832.txt
benchmarks/: CMakeLists.txt  audi.cpp  estimation.cpp  evaluate.cpp  fateman1.cpp  fateman1.hpp  fateman1_dynamic.cpp  fateman1_rational.cpp  fateman1_unpacked.cpp  fateman1_unpacked_truncation.cpp  fateman2.cpp  fateman2.hpp  gastineau1.cpp  gastineau1.hpp  gastineau2.cpp  gastineau2.hpp  gastineau3.cpp  gastineau3.hpp  gastineau4.cpp  gastineau4.hpp  memory_perf.cpp  monagan.hpp  monagan1.cpp  monagan2.cpp  monagan3.cpp  monagan4.cpp  monagan5.cpp  pearce1.cpp  pearce1.hpp  pearce1_dynamic.cpp  pearce1_rational.cpp  pearce1_unpacked.cpp  pearce2.cpp  pearce2.hpp  pearce2_unpacked.cpp  perminov1.cpp  power_series.cpp  rectangular.cpp  s11n_perf.cpp  simple_timer.hpp  (+1 more)
benchmarks/data/: s2l1.mpackp.bz2
cmake_modules/: FindDbgEng.cmake  FindGMP.cmake  FindMPFR.cmake  FindMSGPACK-C.cmake  Findlibbacktrace.cmake  PiranhaCompilerLinkerSettings.cmake  PiranhaFindBZip2.cmake  PiranhaFindBoost.cmake  PiranhaPlatformSettings.cmake  (+16 more)
pyranha/: CMakeLists.txt  __init__.py  _common.py  _version.py.in  celmec.py  core.cpp  divisor_series_descriptor.hpp  exceptions.hpp  expose_divisor_series.cpp  expose_divisor_series.hpp  expose_divisor_series_0.cpp  expose_divisor_series_1.cpp  expose_divisor_series_2.cpp  expose_divisor_series_3.cpp  expose_divisor_series_4.cpp  expose_divisor_series_5.cpp  expose_divisor_series_6.cpp  expose_divisor_series_7.cpp  expose_divisor_series_8.cpp  expose_poisson_series.cpp  expose_poisson_series.hpp  expose_poisson_series_0.cpp  expose_poisson_series_1.cpp  expose_poisson_series_10.cpp  expose_poisson_series_11.cpp  expose_poisson_series_12.cpp  expose_poisson_series_13.cpp  expose_poisson_series_14.cpp  expose_poisson_series_15.cpp  expose_poisson_series_2.cpp  expose_poisson_series_3.cpp  expose_poisson_series_4.cpp  expose_poisson_series_5.cpp  expose_poisson_series_6.cpp  expose_poisson_series_7.cpp  expose_poisson_series_8.cpp  expose_poisson_series_9.cpp  expose_polynomials.cpp  expose_polynomials.hpp  expose_polynomials_0.cpp  (+33 more)
pyranha/core/: CMakeLists.txt  __init__.py  core.cpp
pyranha/tutorial/: __init__.py  hello_piranha.py  integer.py  rational.py
src/: CMakeLists.txt  aligned_memory.hpp  array_hash_set.hpp  array_key.hpp  base_series.hpp  base_series_multiplier.hpp  base_term.hpp  binomial.hpp  cache_aligning_allocator.hpp  coefficient_concept.hpp  concepts.hpp  config.hpp.in  container_element_concept.hpp  convert_to.hpp  crtp_concept.hpp  crtp_helper.hpp  cvector.hpp  debug_access.hpp  degree_truncator_settings.cpp  degree_truncator_settings.hpp  divisor.hpp  divisor_series.hpp  dynamic_aligning_allocator.hpp  dynamic_kronecker_monomial.hpp  echelon_descriptor.hpp  echelon_position.hpp  echelon_size.hpp  environment.cpp  environment.hpp  exceptions.cpp  exceptions.hpp  extended_integer_types.cpp  extended_integer_types.hpp.in  forwarding.hpp  gmp_memory.cpp  gmp_memory.hpp  hash_set.hpp  hop_table.hpp  init.hpp  integer.hpp  (+78 more)
src/concepts/: array_key_value_type.hpp  coefficient.hpp  container_element.hpp  crtp.hpp  degree_key.hpp  differentiable_coefficient.hpp  differentiable_term.hpp  key.hpp  monomial_exponent.hpp  multaddable_coefficient.hpp  multipliable_coefficient.hpp  multipliable_term.hpp  poisson_series_coefficient.hpp  power_series.hpp  power_series_term.hpp  series.hpp  term.hpp  truncator.hpp
src/detail/: array_key_fwd.hpp  atomic_flag_array.hpp  atomic_utils.hpp  base_series_fwd.hpp  base_term_fwd.hpp  cf_mult_impl.hpp  config_clang.hpp  config_gcc.hpp  config_intel.hpp  degree_commons.hpp  demangle.hpp  determine_integer_types.hpp  divisor_series_fwd.hpp  echelon_descriptor_fwd.hpp  gcc_int128.hpp  gcd.hpp  gmp.hpp  inherit.hpp  init_data.hpp  integer_fwd.hpp  is_digit.hpp  km_commons.hpp  kronecker_monomial_fwd.hpp  math_tt_fwd.hpp  mp_rational_fwd.hpp  mpfr.hpp  parallel_vector_transform.hpp  poisson_series_fwd.hpp  polynomial_fwd.hpp  prepare_for_print.hpp  rational_fwd.hpp  real_fwd.hpp  safe_integral_adder.hpp  series_fwd.hpp  series_multiplier_fwd.hpp  sfinae_types.hpp  small_vector_fwd.hpp  symbol_set_fwd.hpp  toolbox.hpp  top_level_series_fwd.hpp  (+5 more)
tests/: CMakeLists.txt  aligned_memory.cpp  array_hash_set.cpp  array_key.cpp  atomic_utils.cpp  audi_perf.cpp  base_series.cpp  base_series_multiplier.cpp  base_series_multiplier_01.cpp  base_series_multiplier_02.cpp  base_term.cpp  benchmark.cpp  binomial.cpp  cache_aligning_allocator.cpp  convert_to.cpp  cvector.cpp  degree.cpp  degree_truncator_settings.cpp  demangle.cpp  divisor.cpp  divisor_01.cpp  divisor_02.cpp  divisor_series.cpp  divisor_series_01.cpp  divisor_series_02.cpp  dynamic_aligning_allocator.cpp  dynamic_kronecker_monomial.cpp  echelon_descriptor.cpp  echelon_position.cpp  echelon_size.cpp  environment.cpp  estimation1_perf.cpp  estimation2_perf.cpp  estimation_perf.cpp  evaluate_perf.cpp  exceptions.cpp  fateman1.cpp  fateman1.hpp  fateman1_dynamic_perf.cpp  fateman1_perf.cpp  (+177 more)
tests/data/: limits.txt  sin(2_l1).epst.bz2  sin(l1-l3).epst.bz2  sl1l3.mpackp.bz2
tools/sample_project/: CMakeLists.txt  main.cpp
tutorial/: CMakeLists.txt  hello_piranha.cpp  integer.cpp  rational.cpp  real_.cpp
tutorials/: CMakeLists.txt  hello_piranha.cpp  integer.cpp  rational.cpp  real_.cpp
(+2536 files in other folders)
